Simplify bounded values and script result validation
Took 3 minutes